fix(header): on mobile, when user logged in, incorrect padding bottom was added

--- a/fe/src/components/header/header.scss
+++ b/fe/src/components/header/header.scss
@@ -159,7 +159,7 @@ header {
 
     .nav-user {
         float: right;
-        margin: 10px 2.5% 10px 0;
+        margin: 10px 2.5% 0 0;
 
         .btn {
             cursor: pointer;
